# NodalMOD

./: .gitignore  LICENSE  Notes  Pipfile  Plotten_marie.py  calculate_scen_kpi.py  cyclefinding.py  data_nodes_to_zones.csv  data_object.py  df_nodes_to_zones_filtered.csv  final_ntc_BAU.xlsx  final_ntc_BZ2.xlsx  final_ntc_BZ3.xlsx  final_ntc_BZ5.xlsx  gdf_windfarms.csv  generators_filtered.csv  generators_merged.csv  get_ninja_timeseries.py  helper_functions.py  import_data_object.py  import_data_object2.py  import_data_object_modified.py  import_data_object_paul.py  import_object_data_Zonal_Configuration.py  job_create_batch.job  job_solve_batch.job  mapping.py  mc_conv.xlsx  model_description.py  model_description_2.py  model_description_modified.py  model_description_paul.py  model_solving.py  offshore bz.py  output.csv  plotting.py  plotting_miri.py  poncelet_optimisation.py  preparing_data_CBH.py  printing_funct.py  (+6 more)
