[tool.poetry]
name = "mulcarni"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.5.1"
geopandas = "^0.12.1"
gurobipy = "^10.0.0"
plotly = "^5.11.0"
colour = "^0.1.5"
numba = "^0.56.4"
requests = "^2.28.1"
networkx = "^2.8.8"
rtree = "^1.0.1"
openpyxl = "^3.0.10"
ipython = "^8.6.0"


[tool.poetry.group.dev.dependencies]
autopep8 = "^2.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
